--- a/web/src/components/middle/message/Poll.scss
+++ b/web/src/components/middle/message/Poll.scss
@@ -23,7 +23,7 @@
   }
 
   .poll-voters-count {
-    margin: 0 0 1.125rem;
+    margin: 0.25rem 0 1.125rem;
     text-align: center;
   }
 
@@ -165,6 +165,10 @@
 
   > .Button {
     margin-bottom: 0.1875rem;
+
+    .Message.own & {
+      color: var(--accent-color);
+    }
   }
 
   @media (max-width: 600px) {
